// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
"<li id="1">
    Luke
</li>
"
`;

exports[`composition 1`] = `
"<div>
    <div>
        Widget
    </div>
</div>
"
`;

exports[`interpolated composition 1`] = `
"<html>
    <body>
        <ul>
            <li id="1">
                Love
            </li>
            <li id="2">
                Joy
            </li>
            <li id="3">
                Peace
            </li>
            <li id="4">
                Patience
            </li>
            <li id="5">
                Kindness
            </li>
            <li id="6">
                Goodness
            </li>
            <li id="7">
                Faithfulness
            </li>
            <li id="8">
                Gentleness
            </li>
            <li id="9">
                Self-control
            </li>
        </ul>
    </body>
</html>
"
`;

exports[`local environment 1`] = `
"<div>
    He first loved us.
</div>
"
`;

exports[`attributes passed to local environment 1`] = `
"<div>
    And He is before all things, and in Him all things hold together.
</div>
<div>
    true
</div>
"
`;
